pre-commit-results.txt
[INFO] Initializing environment for https://github.com/pre-commit/pre-commit-hooks.
[WARNING] repo `https://github.com/pre-commit/pre-commit-hooks` uses deprecated stage names (commit, push) which will be removed in a future version.  Hint: often `pre-commit autoupdate --repo https://github.com/pre-commit/pre-commit-hooks` will fix this.  if it does not -- consider reporting an issue to that repo.
[INFO] Initializing environment for https://github.com/astral-sh/ruff-pre-commit.
[INFO] Initializing environment for https://github.com/psf/black.
[INFO] Initializing environment for https://github.com/PyCQA/isort.
[WARNING] repo `https://github.com/PyCQA/isort` uses deprecated stage names (commit, merge-commit, push) which will be removed in a future version.  Hint: often `pre-commit autoupdate --repo https://github.com/PyCQA/isort` will fix this.  if it does not -- consider reporting an issue to that repo.
[INFO] Installing environment for https://github.com/pre-commit/pre-commit-hooks.
[INFO] Once installed this environment will be reused.
[INFO] This may take a few minutes...
[INFO] Installing environment for https://github.com/astral-sh/ruff-pre-commit.
[INFO] Once installed this environment will be reused.
[INFO] This may take a few minutes...
[INFO] Installing environment for https://github.com/psf/black.
[INFO] Once installed this environment will be reused.
[INFO] This may take a few minutes...
[INFO] Installing environment for https://github.com/PyCQA/isort.
[INFO] Once installed this environment will be reused.
[INFO] This may take a few minutes...
Trim trailing whitespace.................................................Passed
Fix end-of-file..........................................................Passed
Check YAML syntax........................................................Failed
- hook id: check-yaml
- exit code: 1

mapping values are not allowed here
  in ".github/workflows/etl_run.yml", line 49, column 23

Check for large files....................................................Passed
Check JSON syntax....................................(no files to check)Skipped
Check for merge conflicts................................................Passed
Check for debug statements...............................................Failed
- hook id: debug-statements
- exit code: 1

Desktop/AGENT/test_django_project/api/views.py - Could not parse ast

	Traceback (most recent call last):
	  File "/home/kipruto/.cache/pre-commit/repo31b98cq2/py_env-python3/lib/python3.12/site-packages/pre_commit_hooks/debug_statement_hook.py", line 57, in check_file
	    ast_obj = ast.parse(f.read(), filename=filename)
	              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
	  File "/usr/lib/python3.12/ast.py", line 52, in parse
	    return compile(source, filename, mode, flags,
	           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
	  File "Desktop/AGENT/test_django_project/api/views.py", line 24
	    except Exception as e:
	                          ^
	IndentationError: unindent does not match any outer indentation level

Check for mixed line endings.............................................Passed
Lint with Ruff...........................................................Failed
- hook id: ruff
- exit code: 2

ruff failed
  Cause: Failed to parse `/home/kipruto/Desktop/vote/university_evoting/.ruff.toml`: TOML parse error at line 1, column 1
  |
1 | line-length = 100
  | ^^^^^^^^^^^^^^^^^
unknown field `profile`, expected one of `force-wrap-aliases`, `force-single-line`, `single-line-exclusions`, `combine-as-imports`, `split-on-trailing-comma`, `order-by-type`, `force-sort-within-sections`, `case-sensitive`, `force-to-top`, `known-first-party`, `known-third-party`, `known-local-folder`, `extra-standard-library`, `relative-imports-order`, `required-imports`, `classes`, `constants`, `variables`, `no-lines-before`, `lines-after-imports`, `lines-between-types`, `forced-separate`, `section-order`, `detect-same-package`, `sections`

Format with Ruff.........................................................Failed
- hook id: ruff-format
- exit code: 2

ruff failed
  Cause: Failed to parse `/home/kipruto/Desktop/vote/university_evoting/.ruff.toml`: TOML parse error at line 1, column 1
  |
1 | line-length = 100
  | ^^^^^^^^^^^^^^^^^
unknown field `profile`, expected one of `force-wrap-aliases`, `force-single-line`, `single-line-exclusions`, `combine-as-imports`, `split-on-trailing-comma`, `order-by-type`, `force-sort-within-sections`, `case-sensitive`, `force-to-top`, `known-first-party`, `known-third-party`, `known-local-folder`, `extra-standard-library`, `relative-imports-order`, `required-imports`, `classes`, `constants`, `variables`, `no-lines-before`, `lines-after-imports`, `lines-between-types`, `forced-separate`, `section-order`, `detect-same-package`, `sections`

Format with Black........................................................Failed
- hook id: black
- exit code: 123

error: cannot format Desktop/AGENT/test_django_project/api/views.py: unindent does not match any outer indentation level (<tokenize>, line 24)

Oh no! 💥 💔 💥
280 files left unchanged, 1 file failed to reformat.

Sort imports with isort..................................................Passed
